--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.5.0",
     "csv-writer": "^1.6.0",
+    "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "next": "^13.4.10",
     "react": "18.2.0",
@@ -19,6 +21,7 @@
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.5",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
