--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.5.0",
+    "base-64": "^1.0.0",
     "csv-writer": "^1.6.0",
+    "dotenv": "^16.3.1",
     "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
+    "formidable": "^3.5.1",
+    "mongoose": "^7.5.2",
+    "multer": "^1.4.5-lts.1",
     "next": "^13.4.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
