--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "apexcharts": "^3.42.0",
     "axios": "^1.5.0",
+    "chart.js": "^4.4.0",
     "csv-writer": "^1.6.0",
     "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "next": "^13.4.10",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "18.2.0",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "uninstall": "^0.0.0"
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.5",
