--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "adm-zip": "^0.5.10",
     "apexcharts": "^3.42.0",
     "axios": "^1.5.0",
     "base-64": "^1.0.0",
+    "chart.js": "^4.4.0",
     "csv-writer": "^1.6.0",
     "dotenv": "^16.3.1",
     "file-saver": "^2.0.5",
