--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^4.4.0",
     "csv-writer": "^1.6.0",
     "dotenv": "^16.3.1",
+    "exceljs": "^4.3.0",
     "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "formidable": "^3.5.1",
